<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_house_number"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextStreetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_street_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_city"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_state_province_or_region"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_zip_or_postal_code"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_country"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/editTextRating"
        android:hint="@string/enter_phone_number"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

    </LinearLayout>


</LinearLayout>